# server/swagger.yaml
@@ -2163,7 +2163,7 @@ paths:
             examples:
               SingleRequirement:
                 value:
-                  date: "2025-12-07"
+                  dayOfWeek: "Monday"
                   shift: "D"
                   skillId: 2
                   preferred: 1
@@ -2339,7 +2339,7 @@ paths:
             examples:
               UpdateRequirement:
                 value:
-                  date: "2025-12-07"
+                  dayOfWeek: "Monday"
                   shift: "D"
                   skillId: 2
                   preferred: 0
@@ -2396,19 +2396,19 @@ paths:
               schema:
                 $ref: '#/components/schemas/StandardErrorResponse'
 
-  /shiftrequirements/date/{date}:
+  /shiftrequirements/day/{dayOfWeek}:
     get:
-      summary: Get shift requirements by date
+      summary: Get shift requirements by day of week
       parameters:
         - in: path
-          name: date
+          name: dayOfWeek
           required: true
           schema:
             type: string
-            format: date
+            example: "Monday"
       responses:
         '200':
-          description: Shift requirements for date
+          description: Shift requirements for day
           content:
             application/json:
               schema:
@@ -2664,10 +2664,9 @@ components:
     ShiftRequirementCreate:
       type: object
       properties:
-        date:
+        dayOfWeek:
           type: string
-          format: date
-          example: "2025-12-07"
+          example: "Monday"
         shift:
           type: string
           example: "D"
@@ -2679,7 +2678,7 @@ components:
           description: 1 if preferred, 0 otherwise
           example: 1
       required:
-        - date
+        - dayOfWeek
         - shift
         - skillId
 
@@ -2688,9 +2687,8 @@ components:
       properties:
         RequirementID:
           type: integer
-        Date:
+        DayOfWeek:
           type: string
-          format: date
         Shift:
           type: string
         SkillID:
